Integration de l4adaption avec le mode prod